--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -52,6 +52,9 @@
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Password" required>
             </div>
+            <div class="form-group">
+                <input type="password" class="form-control" name="repeat_password" placeholder="Repeat Password" required>
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
